--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 CMakeLists.txt.user
-CMakeCache.txt
+cmake-build-debug/CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
@@ -10,7 +10,6 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 Instancje
-
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
